tests/fixtures/invalid/domain_field_min_exceeds_max.gcl
// domain_field_min_exceeds_max.gcl -- min > max on a struct field
type Foo {
    Foo(x: Mass(min: 100.0 kg, max: 50.0 kg)),
}
